refactor: merge ref-skills into corresponding subskills, remove ref-skills directory
Merge 4 ref-skills' scripts and docs into their corresponding subskills:
- compiler-option-optimization → compiler-optimization/ (references + scripts)
- bigdata-framework-optimization → application-config-optimization/ (references + scripts)
- network-io-performance → network-optimization/ (scripts + evals)
- cpu-affinity-optimization → cpu-affinity-optimization/ (scripts)

Key changes:
- Remove ref-skills/ directory and README.md, SOURCES.md
- Remove external-network-io-integration.md and check_external/run_external scripts
- Replace external skill routing sections in subskill SKILL.md files with script tables
- Convert bigdata scripts to recommender mode (output candidate command JSON)
- Merge start-multiple-tm.sh and start-tm-cluster.sh into start_tm.sh
- Fix network collection scripts: syntax errors, hardcoded interface names, heredoc variable expansion
- Clean up ref-skills/external residual references in docs and opencode entry
- Restore opencode/ directory in README structure tree
- Restore install target paths comment in reading-guide.md
- Remove ref-skills from install.sh symlink list

Conflicts resolved with upstream !29 !30:
- external-network-io-integration.md: deleted (wrapper scripts removed)
- reading-guide.md: keep upstream analyzer.md/executor.md, remove ref-skills listing
- compiler-option-playbook.md: use scripts/perf_hotspot.sh path
- cpu-affinity-optimization/SKILL.md: replace Repo-local Integration with script table,
  preserve upstream NPU/vLLM content, keep output fields + script references